# blockchain-analysis-Walpurga03

./: .gitignore  Cargo.toml  README.md
src/: errors.rs  lib.rs  main.rs  op_return.rs
src/blockchain/: block_info.rs  blockchain_info.rs  mod.rs
src/rpc/: rpc_client.rs
src/utils/: decode_hex.rs  input_helpers.rs  mod.rs
tests/: error_tests.rs  integration_test.rs  unit_test.rs
