[package]
name = "rfb_2_2024_4"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoincore-rpc = "0.19.0"
chrono = "0.4.38"
dotenv = "0.15.0"
lazy_static = "1.5.0"
bitcoin = "0.26.0"
hex = "0.4.3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
